--- a/sample-app-for-sdk/src/components/admin/adminForm.css
+++ b/sample-app-for-sdk/src/components/admin/adminForm.css
@@ -4,6 +4,10 @@
 }
 
 /* Admin CSS */
+.adminFormContainer{
+  display: flex;
+  justify-content: center;
+}
 .adminFormCard {
   border: solid gray 2px;
   width: min-content;
@@ -17,4 +21,3 @@
   justify-content: flex-end;
   color: red;
 }
-
