--- a/sample-app-for-sdk/src/components/admin/adminPage.css
+++ b/sample-app-for-sdk/src/components/admin/adminPage.css
@@ -2,6 +2,9 @@
   margin: 0px;
   padding: 0px;
 }
+.adminPageContainer{
+  margin-bottom:20% ;
+}
 .adminKeyForm{
   position: absolute;
   left: 40%;
@@ -19,7 +22,15 @@
   background-color: yellow;
   bottom: .5vh;
 }
-
+#adminToHomeLink{
+  position: absolute;
+  top: 40vh;
+  left: 5%;
+  color: #002bff;
+  border: groove;
+  background-color: black;
+  padding: .5%;
+}
 .glow-on-hover {
   border: none;
   outline: none;
@@ -30,7 +41,6 @@
   z-index: 0;
   border-radius: 10px;
 }
-
 .glow-on-hover:before {
   content: '';
   background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
@@ -47,19 +57,15 @@
   transition: opacity .3s ease-in-out;
   border-radius: 10px;
 }
-
 .glow-on-hover:active {
   color: #000
 }
-
 .glow-on-hover:active:after {
   background: transparent;
 }
-
 .glow-on-hover:hover:before {
   opacity: 1;
 }
-
 .glow-on-hover:after {
   z-index: -1;
   content: '';
@@ -71,7 +77,6 @@
   top: 0;
   border-radius: 10px;
 }
-
 @keyframes glowing {
   0% { background-position: 0 0; }
   50% { background-position: 400% 0; }
