--- a/sample-app-for-sdk/src/components/userAccounts/account.css
+++ b/sample-app-for-sdk/src/components/userAccounts/account.css
@@ -10,15 +10,14 @@
   display: flex;
   justify-content: center;
   background-color: rgba(240, 248, 255, 0.105);
+  -webkit-backdrop-filter: blur(2px);
   backdrop-filter: blur(2px);
   border: groove 15px red;
   padding: .2%;
 }
-
 #logOutInBtn{
   width: 100%
 }
-
 .closeFormWindow{
   position: absolute;
   left: 90%;
@@ -29,11 +28,9 @@
   background-color: rgba(0, 0, 0, 0);
   border: #000;
 }
-
 .closeFormWindow:hover{
   cursor: pointer;
 }
-
 /* THIS IS FOR THE ACCOUNT VERIFICATION PROCESS */
 input {
   margin: 5%;
@@ -41,6 +38,7 @@ input {
 .accountDiv {
   position: fixed;
   background-color: rgba(218, 170, 82, 0.541);
+  -webkit-backdrop-filter: blur(7px);
   backdrop-filter: blur(7px);
   top: 15vh;
   height: min-content;
@@ -53,27 +51,22 @@ input {
   border-radius: 10%;
   display: flex;
   align-items: center;
-  
 }
-
 #signInBtn{
   width: 35%;
   height: 2rem;
   margin: 5%;
 }
 #cancelBtn{
-  
   width: 35%;
   height: 2rem;
   margin: 5%;
 }
-
 .createOption{
   width: max-content;
   position: relative;
   top: 3vh;
 }
-
 #signUpFormBtn{
   width: 45%;
   height: 2vh;
@@ -94,12 +87,10 @@ input {
   left: 80%;
   border-radius: 10%;
 }
-
 #createAccountBtn{
   width: 100%;
   height: 2rem;
 }
-
 #cancelBtn2{
   position: relative;
   top: 3vh;
